[project]
name = "data-extraction-agent"
version = "0.1.0"
description = "AI-powered data extraction agent built on LangChain Deep Agents framework with multi-provider LLM support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Deep Agents Framework
    "deepagents @ git+https://github.com/langchain-ai/deepagents.git",

    # LangChain Core
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",

    # LLM Providers - Open Source First!
    "langchain-groq>=0.2.0",         # Groq - Free tier, ultra-fast
    "langchain-together>=0.2.0",     # Together AI - Budget, open models
    "langchain-huggingface>=0.1.0",  # HuggingFace - Free experimentation
    "langchain-google-genai>=2.0.0", # Google Gemini
    "langchain-anthropic>=0.2.0",    # Anthropic Claude - Fallback
    "langchain-ollama>=0.2.0",       # Ollama - Local models
    "langchain-openai>=0.2.0",       # For OpenRouter compatibility

    # Data Processing
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pymongo>=4.0.0",
    "redis>=5.0.0",

    # Web & API
    "httpx>=0.27.0",
    "markdownify>=0.13.0",
    "tavily-python>=0.5.0",

    # File Processing
    "PyPDF2>=3.0.0",
    "openpyxl>=3.1.0",

    # Utilities
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.7.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "mypy>=1.0.0",
]

all = [
    "data-extraction-agent[dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
